@@ -1,104 +1,292 @@
+import org.gradle.internal.os.OperatingSystem
+
 plugins {
-    id 'org.springframework.boot' version '2.2.10.RELEASE'
-    id 'java'
-    id "org.sonarqube" version "2.7.1"
-    id "jacoco"
+    id "java"
+    id "maven-publish"
+    id "jacoco"
+    id "org.springframework.boot" version "2.5.13"
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id "org.sonarqube" version "3.3"
 }
 
-apply plugin: 'io.spring.dependency-management'
+apply from: 'gradle/jacoco.gradle'
 
-group = 'com.xy’z
-version = '1.0.0'
-sourceCompatibility = '1.8.201'
-targetCompatibility = '1.8.201'
+group = "com.sloan.communication"
+version = "0.0.1-SNAPSHOT"
+description = ""
 
-repositories {
-    mavenLocal()
-    mavenCentral()
-    maven {
-        url "s3://repository.xyz.com.s3.ap-south-1.amazonaws.com"
-        authentication {
-            awsIm(AwsImAuthentication)
-        }
-    }
+publishing {
+    publications {
+        myPublication(MavenPublication) {
+            groupId 'com.sloan.communication'
+            artifactId '1'
+            version '0.0.1-SNAPSHOT'
+            artifact("build/libs/sloan-communication-service-0.0.1-SNAPSHOT.jar")
+        }
+    }
+    repositories {
+        maven {
+            url 'https://pkgs.dev.azure.com/versana/_packaging/Versana/maven/v1'
+            name 'Versana'
+            credentials {
+                username "versanaartifacts"
+                password System.getenv("AZURE_ARTIFACTS_ENV_ACCESS_TOKEN_VERSANA")
+            }
+        }
+    }
 }
 
-dependencies {
-    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
-    implementation('org.springframework.boot:spring-boot-starter-actuator')
-    implementation('org.springframework.boot:spring-boot-starter-web')
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testCompile "org.mockito:mockito-core:2.8.9+"
-    testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.5'
-    testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.5'
-    compile 'io.micrometer:micrometer-core'
-    compile 'io.micrometer:micrometer-registry-prometheus'
-//    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis'
-    implementation "co.elastic.apm:apm-agent-api:1.9.0"
-    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.8.0'
+sourceCompatibility = 11
+targetCompatibility = 11
+assert System.properties["java.specification.version"] == "1.8" || "11" || "12" || "13"
 
-    compile 'com.paytmmoney.pf.common:restTemplateUtil:v1.11-stg'
-//    implementation('com.paytmmoney.pf.referralmodule:referral-module:1.2.472-stg'){
-//        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-data-solr'
-//    }
+apply from: "gradle/sonar.gradle"
 
-    implementation ('com.xyz.client:communication:1.2.6-stg')
-    annotationProcessor 'org.projectlombok:lombok:1.18.4'
-    compileOnly('org.projectlombok:lombok:1.18.4')
-    implementation 'com.paytmmoney.pf.common:web:v4.4'
-    compile (group: 'com.paytmmoney', name: 'pmclient', version: 'v195.2', changing: true) {force = true}
-    implementation (group: 'com.paytmmoney', name: 'pmcontract', version: 'v116-stg', changing: true) {force = true}
+if (OperatingSystem.current().isWindows()) {
+    task classpathJar(type: Jar) {
+        inputs.files sourceSets.main.runtimeClasspath
 
-    // For consuming Message from SQS
-    implementation group: 'com.amazonaws', name: 'aws-java-sdk-sqs' , version: '1.11.678'
-    implementation group: 'com.amazonaws', name: 'aws-java-sdk-sns' , version: '1.11.678'
-    implementation group: 'com.amazonaws', name: 'aws-java-sdk-ec2' , version: '1.11.678'
-    implementation group: 'com.amazonaws', name: 'aws-java-sdk-cloudformation' , version: '1.11.678'
-    implementation group: 'com.amazonaws', name: 'amazon-sqs-java-messaging-lib', version: '1.0.8'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '1.2.4.RELEASE'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-aws-messaging', version: '1.2.4.RELEASE'
+        archiveName = "runboot-classpath.jar"
+        doFirst {
+            manifest {
+                def classpath = sourceSets.main.runtimeClasspath.files
+                attributes "Class-Path": classpath.collect { f -> f.toURI().toString() }.join(" ")
+            }
+        }
+    }
 
-
-    //to generate jwt token -test
-    implementation 'com.auth0:java-jwt:4.0.0'
-
-    implementation 'commons-codec:commons-codec:1.15'
-
-    implementation('org.modelmapper:modelmapper:2.3.0')
-    implementation group: 'org.springframework.kafka', name: 'spring-kafka'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation group: 'net.sf.supercsv', name: 'super-csv', version: '2.3.1'
-    compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core'
-    compile group: 'org.springframework', name: 'spring-webmvc'
-    implementation group: 'org.json', name: 'json', version: '+'
-    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.9.9'
-    compile 'org.apache.commons:commons-csv:1.10.0'
-    implementation 'com.slack.api:slack-api-client:1.15.0'
-    implementation group: 'org.springframework.data', name: 'spring-data-redis'
-    implementation 'redis.clients:jedis:3.9.0'
-    implementation 'org.hibernate:hibernate-envers'
-    compile 'com.paytmmoney.pf.common:pmMetrics:1.0.4'
+    bootRun {
+        classpath = classpathJar.outputs.files
+    }
 }
 
-sonarqube {
-    properties {
+defaultTasks "bootRun"
 
-        property "sonar.projectName", "pf-userprofile-referral-staging"
-        property "sonar.projectKey", "pf-ss”
-        property "sonar.ce.javaOpts", "-Xmx4096m -XX:MaxPermSize=1024m"
-        property "sonar.sourceEncoding", "UTF-8"
-    }
-}
-
-bootJar {
-    version = '1.0.0'
-    mainClassName = 'com.paytmmoney.pf.referral.CustomerReferralApplication'
-}
-
-bootRun {
-    environment SPRING_PROFILES_ACTIVE: environment.SPRING_PROFILES_ACTIVE ?: "local"
+springBoot {
+    mainClassName = "com.sloan.communication.SloanCommunicationServiceApp"
 }
 
 test {
-    environment SPRING_PROFILES_ACTIVE: environment.SPRING_PROFILES_ACTIVE ?: "test"
+    useJUnitPlatform()
+    testLogging {
+        events 'FAILED', 'SKIPPED'
+    }
+    reports.html.enabled = false
+}
+
+if (!project.hasProperty("runList")) {
+    project.ext.runList = "main"
+}
+
+//configurations {
+//    providedRuntime
+//    implementation.exclude module: "spring-boot-starter-tomcat"
+//}
+
+ext {
+    ver = [
+            snakeyaml: '1.32'
+    ]
+}
+
+dependencies {
+//    implementation group: "io.github.jhipster", name: "jhipster-framework"
+    implementation platform("io.github.jhipster:jhipster-dependencies:${jhipster_dependencies_version}"){
+        exclude group: "com.fasterxml.jackson.core", module: "jackson-databind"
+        exclude group: "org.springframework.boot"
+        exclude group: "org.springframework.security"
+        exclude group: "org.springframework.cloud"
+        exclude group: "org.yaml", module: "snakeyaml"
+        exclude group: 'org.springframework.data', module: 'spring-data-mongodb'
+        exclude group: "org.springframework", module: "spring-webmvc"
+        exclude group: "com.google.guava", module: "guava"
+    }
+    implementation 'org.springframework.data:spring-data-mongodb:3.3.5'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.0'
+    implementation(group: 'com.ey.nexus.avro', name: 'mod-nexus-common-avro', version: '1.0.16'){
+        exclude group: "org.yaml", module: "snakeyaml"
+        exclude group: "com.fasterxml.jackson.core", module: "jackson-databind"
+    }
+    implementation "javax.validation:validation-api"
+    implementation 'org.projectlombok:lombok:1.18.22'
+    implementation(group: 'com.sloan', name: 'sloan_event_payload_models_thin', version: '0.0.16.14-RELEASE')
+    implementation group: 'com.sloan.core', name: 'sloan-sb-logging-utility', version: '1.05'
+//        implementation(group: 'com.sloan.kvutility', name: 'sloankeyvaultUtility', version: '0.0.3-SNAPSHOT')
+    implementation 'com.fasterxml.woodstox:woodstox-core:6.4.0'
+    implementation (group: 'org.yaml', name: 'snakeyaml', version: ver.snakeyaml)
+    implementation group: 'com.sloan.mikeyvault', name:'sloanmikeyvault', version: '0.0.7-RELEASE'
+    implementation (group: 'com.microsoft.azure', name:'azure-keyvault', version: '1.2.6') {
+        exclude group: "com.google.guava", module: "guava"
+        exclude group: "com.squareup.okio", module: "okio"
+    }
+    implementation group: 'com.squareup.okio', name: 'okio', version: '3.4.0'
+    implementation group: 'com.google.guava', name: 'guava', version: '32.0.1-jre'
+    implementation (group: 'com.azure', name:'azure-identity', version: '1.5.5') {
+        exclude group: "net.minidev", module: "json-smart"
+        exclude group: 'com.nimbusds', module: 'nimbus-jose-jwt'
+    }
+    implementation(group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.31') {
+        exclude group: 'net.minidev', module: 'json-smart'
+    }
+    implementation group: 'com.microsoft.azure', name: 'azure', version: '1.41.2'
+    implementation "org.springframework.security:spring-security-web:5.7.8"
+    implementation group: 'io.netty', name:'netty-common', version: '4.1.85.Final'
+    implementation (group: 'com.azure', name:'azure-security-keyvault-secrets', version: '4.5.2'){
+        exclude group: "io.netty", module: "netty-common"
+    }
+    implementation(group: 'com.sloan.core', name: 'sloan-exception-lib-thin', version: '0.0.2-RELEASE')
+    implementation ("org.springframework.boot:spring-boot-starter-cache"){
+        exclude group: "org.yaml", module: "snakeyaml"
+    }
+    implementation "io.dropwizard.metrics:metrics-core"
+    implementation "io.micrometer:micrometer-registry-prometheus"
+    implementation ("net.logstash.logback:logstash-logback-encoder"){
+        exclude group: "com.fasterxml.jackson.core", module: "jackson-databind"
+    }
+    implementation "com.hazelcast:hazelcast:5.1.7"
+    implementation "com.hazelcast:hazelcast-spring:5.1.3"
+    implementation "javax.cache:cache-api"
+    implementation "org.apache.commons:commons-lang3"
+    implementation "commons-io:commons-io"
+    implementation "javax.transaction:javax.transaction-api"
+    implementation "org.hibernate:hibernate-entitymanager"
+    implementation "org.hibernate.validator:hibernate-validator"
+    implementation "org.springframework.boot:spring-boot-loader-tools"
+    implementation "org.springframework.security:spring-security-core:5.7.8"
+    implementation ("org.springframework.boot:spring-boot-starter-logging"){
+        exclude group: "org.yaml", module: "snakeyaml"
+    }
+    implementation ("org.springframework.boot:spring-boot-starter-actuator"){
+        exclude group: "org.yaml", module: "snakeyaml"
+        exclude group: "com.fasterxml.jackson.core", module: "jackson-databind"
+        exclude group: "org.springframework.boot", module: "spring-boot-autoconfigure"
+        exclude group: "org.springframework.boot", module: "spring-boot-actuator-autoconfigure"
+    }
+    implementation group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.5.15'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-actuator-autoconfigure', version: '2.7.11'
+    implementation ("org.springframework.boot:spring-boot-starter-aop"){
+        exclude group: "org.yaml", module: "snakeyaml"
+    }
+    implementation ("org.springframework.boot:spring-boot-starter-security"){
+        exclude group: "org.yaml", module: "snakeyaml"
+        exclude group: "org.springframework.security", module: "spring-security-core"
+        exclude group: "org.springframework.security", module: "spring-security-web"
+    }
+    implementation("org.springframework.boot:spring-boot-starter-web"){
+        exclude group: "org.yaml", module: "snakeyaml"
+        exclude group: "com.fasterxml.jackson.core", module: "jackson-databind"
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
+        exclude group: "org.springframework", module: "spring-webmvc"
+    }
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.26'
+    implementation ("org.springframework.boot:spring-boot-starter-tomcat:2.7.5"){
+        exclude group: "org.apache.tomcat.embed", module: "tomcat-embed-core"
+        exclude group: "org.apache.tomcat.embed", module: "tomcat-embed-el"
+        exclude group: "org.apache.tomcat.embed", module: "tomcat-embed-websocket"
+    }
+    implementation ("org.apache.tomcat.embed:tomcat-embed-core:9.0.75"){
+        exclude group: "org.apache.tomcat", module: "tomcat-annotations-api"
+    }
+    implementation ("org.apache.tomcat:tomcat-annotations-api:9.0.69")
+    implementation ("org.apache.tomcat.embed:tomcat-embed-el:9.0.69")
+    implementation ("org.apache.tomcat.embed:tomcat-embed-websocket:9.0.69")
+
+    implementation ("org.zalando:problem-spring-web"){
+        exclude group: "com.fasterxml.jackson.core", module: "jackson-databind"
+    }
+//    implementation ("org.springframework.cloud:spring-cloud-starter"){
+//        exclude group: "org.yaml", module: "snakeyaml"
+//    }
+    implementation "org.springframework.retry:spring-retry"
+//    implementation ("org.springframework.cloud:spring-cloud-starter-config"){
+//        exclude group: "org.yaml", module: "snakeyaml"
+//    }
+//    implementation ("org.springframework.cloud:spring-cloud-starter-openfeign"){
+//        exclude group: "org.yaml", module: "snakeyaml"
+//    }
+//    implementation ("org.springframework.boot:spring-boot-starter-cloud-connectors"){
+//        exclude group: "org.yaml", module: "snakeyaml"
+//    }
+//    implementation "org.springframework.security:spring-security-config"
+//    implementation "org.springframework.security:spring-security-data"
+//    implementation "org.springframework.security:spring-security-web"
+//    implementation "io.jsonwebtoken:jjwt-api"
+//    runtimeOnly "io.jsonwebtoken:jjwt-impl"
+//    runtimeOnly "org.springframework.boot:spring-boot-starter-tomcat"
+//    runtimeOnly "io.jsonwebtoken:jjwt-jackson"
+//    compileOnly "javax.servlet:javax.servlet-api:3.1.0"
+    implementation("com.twilio.sdk:twilio:7.1.0") {
+        exclude module: "jjwt"
+        exclude group: "com.fasterxml.jackson.core", module: "jackson-databind"
+        exclude group: "com.google.guava", module: "guava"
+    }
+//    implementation 'org.freemarker:freemarker:2.3.23'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker'
+    implementation (group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf-itext5', version: '9.1.22') {
+        exclude group: "com.itextpdf", module: "itextpdf"
+    }
+    implementation (group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.3')
+    implementation (group: 'com.sendgrid', name: 'sendgrid-java', version: '4.7.2'){
+        exclude group: "com.fasterxml.jackson.core", module: "jackson-databind"
+    }
+    implementation group: 'com.sendgrid', name: 'java-http-client', version: '4.1.0'
+    implementation (group: 'org.springframework.kafka', name: 'spring-kafka') {
+        exclude group: 'org.xerial.snappy', module: 'snappy-java'
+    }
+    implementation group: 'org.xerial.snappy', name: 'snappy-java', version: '1.1.10.1'
+    implementation group: 'com.microsoft.azure', name: 'azure-storage', version: '8.6.6'
+    implementation ("io.springfox:springfox-bean-validators") {
+        exclude group: "com.google.guava", module: "guava"
+    }
+    implementation group: 'tech.allegro.schema.json2avro', name: 'converter', version: '0.2.10'
+    implementation "org.mapstruct:mapstruct:${mapstruct_version}"
+    implementation group: 'net.minidev', name: 'json-smart', version: '2.4.10'
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstruct_version}"
+    annotationProcessor "org.hibernate:hibernate-jpamodelgen:${hibernate_version}"
+    annotationProcessor "org.glassfish.jaxb:jaxb-runtime:${jaxb_runtime_version}"
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+    implementation (group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb'){
+        exclude group: "org.yaml", module: "snakeyaml"
+    }
+    annotationProcessor("org.springframework.boot:spring-boot-configuration-processor:${spring_boot_version}") {
+        exclude group: "com.vaadin.external.google", module: "android-json"
+    }
+    testImplementation ("com.jayway.jsonpath:json-path") {
+        exclude group: "net.minidev", module: "json-smart"
+    }
+    testImplementation("org.springframework.boot:spring-boot-starter-test") {
+        exclude module: "junit"
+        exclude group: "com.vaadin.external.google", module: "android-json"
+        exclude group: "org.mockito", module: "mockito-core"
+        exclude group: "org.yaml", module: "snakeyaml"
+        exclude group: "org.springframework.boot", module: "spring-boot-autoconfigure"
+    }
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '2.17.0'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.6.0'
+    testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '1.6.4'
+    testImplementation ("org.springframework.security:spring-security-test"){
+        exclude group: "org.springframework.security", module: "spring-security-core"
+        exclude group: "org.springframework.security", module: "spring-security-web"
+    }
+    testImplementation "org.springframework.boot:spring-boot-test"
+    testImplementation "org.junit.jupiter:junit-jupiter-engine"
+    testImplementation "com.tngtech.archunit:archunit-junit5-api:${archunit_junit5_version}"
+    testRuntimeOnly "com.tngtech.archunit:archunit-junit5-engine:${archunit_junit5_version}"
+    testImplementation "org.assertj:assertj-core"
+    testImplementation "junit:junit"
+    testImplementation "org.mockito:mockito-core"
+    testImplementation "org.hamcrest:hamcrest-library"
+    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '2.7.21'
+    testCompileOnly "javax.servlet:javax.servlet-api:3.1.0"
+    testImplementation 'org.projectlombok:lombok:1.18.22'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
+}
+
+task cleanResources(type: Delete) {
+    delete "build/resources"
+}
+
+wrapper {
+    gradleVersion = "7.1.1"
 }
